--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "autoprefixer": "^10.4.0",
+    "concurrently": "^6.4.0",
+    "cross-env": "^7.0.3",
+    "postcss-cli": "^9.0.2",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "tailwindcss": "^2.2.19"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.0",
-    "concurrently": "^6.3.0",
-    "cross-env": "^7.0.3",
-    "postcss-cli": "^9.0.1",
-    "sirv-cli": "^1.0.0",
-    "tailwindcss": "^2.2.19"
+    "sirv-cli": "^1.0.0"
   }
 }
