--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "tailwindcss": "^2.2.19"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "fusioncharts": "^3.18.0",
+    "sirv-cli": "^1.0.0",
+    "svelte-fusioncharts": "^1.0.0"
   }
 }
